cmake_minimum_required(VERSION 3.5)

project (c_study C)

add_executable(bit_test1 bittest1.c)
add_executable(bin_bit binbit.c)
add_executable(invert4 invert4.c)
add_executable(bit_convert exec_15_1.c)
add_executable(bit_check exec_15_3.c)
add_executable(check_bit exec_15_4.c)
add_executable(check_alignment example_15_5.c)
add_executable(check_pragma pragma.c)